add content to body

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Coding Languages</title>
   </head>
   <body>
+    <h1>Which coding language is the right fit for me?</h1>
+    <div class="container">
+      <h2>Front End Developing vs Back End Developing</h2>
+      <ul>
+        <li>Front End: Front-end developers spend their time making things look and work well, obsessing over layouts, navigation, colors, and design.</li>
+        <li>Back End: Back-end developers are usually write the web services and APIs used by front-end developers and mobile application developers.</p>
+      </ul>
+          <form id="preference">
 
+    </div>
   </body>
 </html>
