--- a/index.html
+++ b/index.html
@@ -16,7 +16,34 @@
         <li>Front End: Front-end developers spend their time making things look and work well, obsessing over layouts, navigation, colors, and design.</li>
         <li>Back End: Back-end developers are usually write the web services and APIs used by front-end developers and mobile application developers.</p>
       </ul>
-          <form id="preference">
+      <h2>Do you prefer front-end or back-end?</h2>
+      <form id="preference">
+        <div class="radio">
+          <label>
+            <input type="radio" name="type" value="front" checked>
+            Front-End
+          </label>
+        </div>
+        
+        <div class="radio">
+          <label>
+            <input type="radio" name="type" value="back" checked>
+            Back-End
+          </label>
+        </div>
+
+      <h2 class="front-end">
+        <ul class="languages">
+          <li>HTML: Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</li>
+          <li>CSS: Cascading Style Sheet can define color, font, text alignment, size, borders, spacing, layout and many other typographic characteristics</li>
+          <li>Javascript: JavaScript (JS) is a programming language used to make web pages interactive.. </li>
+        </ul>
+
+      <!-- </h2>
+
+          <form id="about-you"> -->
+
+
 
     </div>
   </body>
