--- a/index.html
+++ b/index.html
@@ -24,27 +24,32 @@
             Front-End
           </label>
         </div>
-        
+
         <div class="radio">
           <label>
             <input type="radio" name="type" value="back" checked>
             Back-End
           </label>
         </div>
+        <button type="submit" class="btn">Submit</button>
+      </form>
 
-      <h2 class="front-end">
-        <ul class="languages">
+      <div class="front-end">
+        <ul>
           <li>HTML: Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</li>
           <li>CSS: Cascading Style Sheet can define color, font, text alignment, size, borders, spacing, layout and many other typographic characteristics</li>
           <li>Javascript: JavaScript (JS) is a programming language used to make web pages interactive.. </li>
         </ul>
+      </div>
 
-      <!-- </h2>
-
-          <form id="about-you"> -->
-
-
-
+      <div class="back-end">
+        <ul>
+          <li>HTML: Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</li>
+          <li>CSS: Cascading Style Sheet can define color, font, text alignment, size, borders, spacing, layout and many other typographic characteristics</li>
+          <li>Javascript: JavaScript (JS) is a programming language used to make web pages interactive.. </li>
+        </ul>
+      </div>
+    
     </div>
   </body>
 </html>
