buttons are functional

--- a/index.html
+++ b/index.html
@@ -21,35 +21,36 @@
         <div class="radio">
           <label>
             <input type="radio" name="type" value="front" checked>
-            Front-End
+              Front-End
           </label>
         </div>
 
         <div class="radio">
           <label>
             <input type="radio" name="type" value="back" checked>
-            Back-End
+              Back-End
           </label>
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
-
       <div class="front-end">
-        <ul>
+        <ul class="front">
           <li>HTML: Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</li>
           <li>CSS: Cascading Style Sheet can define color, font, text alignment, size, borders, spacing, layout and many other typographic characteristics</li>
-          <li>Javascript: JavaScript (JS) is a programming language used to make web pages interactive.. </li>
+          <li>Javascript: JavaScript (JS) is a programming language used to make web pages interactive.</li>
         </ul>
       </div>
 
       <div class="back-end">
         <ul>
-          <li>HTML: Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</li>
-          <li>CSS: Cascading Style Sheet can define color, font, text alignment, size, borders, spacing, layout and many other typographic characteristics</li>
-          <li>Javascript: JavaScript (JS) is a programming language used to make web pages interactive.. </li>
+          <li>PHP: PHP is designed to pull and edit information in the database. It’s most commonly bundled with databases written in the SQL language. PHP was designed strictly for the web and remains one of the most widely used languages around.</li>
+          <li>Ruby: Ruby is equal parts simplicity and complexity, pairing simple code with more flexibility and extra tools. Ruby bundles the back end with database functionality that PHP and SQL can offer as a pair—it’s great for startups, easy maintenance, and high-traffic demands.</li>
+          <li>Python: With fewer lines of code, the Python programming language is fast, making it ideal for getting things to market quickly. The emphasis is on readability and simplicity, which makes it great for beginners.</li>
         </ul>
       </div>
-    
+
+
+
     </div>
   </body>
 </html>
