add images for back-end section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
       <div class="back-end">
         <ul>
           <li>PHP: PHP is designed to pull and edit information in the database. It’s most commonly bundled with databases written in the SQL language. PHP was designed strictly for the web and remains one of the most widely used languages around.</li>
+          <img src="img/php.png">
           <li>Ruby: Ruby is equal parts simplicity and complexity, pairing simple code with more flexibility and extra tools. Ruby bundles the back end with database functionality that PHP and SQL can offer as a pair—it’s great for startups, easy maintenance, and high-traffic demands.</li>
+          <img src="img/ruby.png">
           <li>Python: With fewer lines of code, the Python programming language is fast, making it ideal for getting things to market quickly. The emphasis is on readability and simplicity, which makes it great for beginners.</li>
+          <img src="img/python.png">
         </ul>
       </div>
 
