add second question

--- a/index.html
+++ b/index.html
@@ -52,8 +52,27 @@
         </ul>
       </div>
 
-
-
+      <h2>Do you have any experience in coding?</h3>
+      <form>
+        <div class="radio">
+          <label>
+            <input type="radio" name="type" value="experience" checked>
+              Yes
+          </label>
+        </div>
+        <div class-radio="radio">
+          <label>
+            <input type="radio" name="type" value="front" checked>
+              No
+          </label>
+          <div class-radio="radio">
+            <label>
+              <input type="radio" name="type" value="experience" checked>
+                Some
+            </label>
+          </div>
+        <button type="submit" class="btn">Submit</button>    
+      </form>
     </div>
   </body>
 </html>
