--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
+
       <div class="front-end">
         <ul class="front">
           <li>HTML: Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</li>
@@ -53,26 +54,28 @@
       </div>
 
       <h2>Do you have any experience in coding?</h3>
-      <form>
+      <form id"experience">
         <div class="radio">
           <label>
             <input type="radio" name="type" value="experience" checked>
               Yes
           </label>
         </div>
+
         <div class-radio="radio">
           <label>
-            <input type="radio" name="type" value="front" checked>
+            <input type="radio" name="type" value="experience" checked>
               No
           </label>
-          <div class-radio="radio">
-            <label>
-              <input type="radio" name="type" value="experience" checked>
-                Some
-            </label>
-          </div>
-        <button type="submit" class="btn">Submit</button>    
+        </div>
+        <button type="button" class="btn">Submit</button>
       </form>
+      <div class="experience">
+        <p id="yes">Excellent! Depending on your past experience, you may want to explore more challenging languages, such as Java, C#, or C++</p>
+      </div>
+      <div class="experience">
+        <p id="no">No problem! People from various backgrounds come to Epicodus. Some have no experience whatsoever and are looking to make a career change. So, you're in good company!</p>
+      </div>  
     </div>
   </body>
 </html>
