add third question to form

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <h2>Do you have any experience in coding?</h3>
-      <form id"experience">
+      <form id="experience">
         <div class="radio">
           <label>
             <input type="radio" name="type" value="experience" checked>
@@ -75,7 +75,23 @@
       </div>
       <div class="experience">
         <p id="no">No problem! People from various backgrounds come to Epicodus. Some have no experience whatsoever and are looking to make a career change. So, you're in good company!</p>
-      </div>  
+      </div>
+      <h2>Are you interested in a full-time program?</h2>
+        <form id="program-length">
+          <div class="radio">
+            <label>
+              <input type="radio" name="type" value="front" checked>
+              Yes
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="type" value="front" checked>
+              No
+            </label>
+          </div>
+          <button type="submit" class="btn">Submit</button>
+        </form>
     </div>
   </body>
 </html>
