update #programLength section of js

--- a/index.html
+++ b/index.html
@@ -77,21 +77,27 @@
         <p id="no">No problem! People from various backgrounds come to Epicodus. Some have no experience whatsoever and are looking to make a career change. So, you're in good company!</p>
       </div>
       <h2>Are you interested in a full-time program?</h2>
-        <form id="program-length">
-          <div class="radio">
-            <label>
-              <input type="radio" name="type" value="front" checked>
-              Yes
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="type" value="front" checked>
-              No
-            </label>
-          </div>
-          <button type="submit" class="btn">Submit</button>
-        </form>
+      <form id="programLength">
+        <div class="radio">
+          <label>
+            <input type="radio" name="type" value="Yes" checked>
+            Yes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="type" value="No" checked>
+            No
+          </label>
+        </div>
+        <button type="submit" class="btn">Submit</button>
+      </form>
+      <div class="full-length">
+        <p class="full-time">Our full-time program consists of over 800 hours classroom learning, 80 hours of job and internship preparation, and 150 hours of internship learning.</p>
+      </div>
+      <div class="evening-class">
+        <p class="part-time">We understand how demanding this program can be. Many of our students work full-time jobs among other responsibilities. We offer a 15 week introduction course on Mondays and Wednesdays from 6-9pm</p>
+      </div>
     </div>
   </body>
 </html>
