add additional html content to bottom paragraph

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
       <div class="back-end">
         <ul>
-          <li>PHP: PHP is designed to pull and edit information in the database. It’s most commonly bundled with databases written in the SQL language. PHP was designed strictly for the web and remains one of the most widely used languages around.</li>
+          <li>PHP: PHP is designed to pull and edit information in the database. It’s most commonly bundled with databases written in the SQL language. PHP was designed strictly for the web and remains one of the most widely used languages around. The versatility of the language and the frameworks it powers make employment options numerous and diverse. </li>
           <img src="img/php.png">
-          <li>Ruby: Ruby is equal parts simplicity and complexity, pairing simple code with more flexibility and extra tools. Ruby bundles the back end with database functionality that PHP and SQL can offer as a pair—it’s great for startups, easy maintenance, and high-traffic demands.</li>
+          <li>Ruby: Ruby is equal parts simplicity and complexity, pairing simple code with more flexibility and extra tools. Ruby bundles the back end with database functionality that PHP and SQL can offer as a pair—it’s great for startups, easy maintenance, and high-traffic demands. It's very popular with startups and smaller companies</li>
           <img src="img/ruby.png">
           <li>Python: With fewer lines of code, the Python programming language is fast, making it ideal for getting things to market quickly. The emphasis is on readability and simplicity, which makes it great for beginners.</li>
           <img src="img/python.png">
@@ -80,17 +80,17 @@
       <form id="programLength">
         <div class="radio">
           <label>
-            <input type="radio" name="type" value="Yes" checked>
+            <input type="radio" name="length" value="Yes" checked>
             Yes
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="type" value="No" checked>
+            <input type="radio" name="length" value="No" checked>
             No
           </label>
         </div>
-        <button type="submit" class="btn">Submit</button>
+        <button type="submit" class="length">Submit</button>
       </form>
       <div class="full-length">
         <p class="full-time">Our full-time program consists of over 800 hours classroom learning, 80 hours of job and internship preparation, and 150 hours of internship learning.</p>
@@ -98,6 +98,8 @@
       <div class="evening-class">
         <p class="part-time">We understand how demanding this program can be. Many of our students work full-time jobs among other responsibilities. We offer a 15 week introduction course on Mondays and Wednesdays from 6-9pm</p>
       </div>
+      <p>If you are new to developing, we recommend that you consider the Ruby track or Python. You can learn more about our Ruby track <a href="https://www.epicodus.com/ruby">here.</a>
+      <p>However, PHP is especially popular for content-heavy websites. It's known for it's use in content management systems like Wordpress. Click <a href="https://www.epicodus.com/php">here</a> to learn more about our PHP program.</p> 
     </div>
   </body>
 </html>
