--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Which coding language is the right fit for me?</h1>
     <div class="container">
-      <h2>Front End Developing vs Back End Developing</h2>
+      <h2 id="top">Front End Developing vs Back End Developing</h2>
       <ul>
         <li>Front End: Front-end developers spend their time making things look and work well, obsessing over layouts, navigation, colors, and design.</li>
         <li>Back End: Back-end developers are usually write the web services and APIs used by front-end developers and mobile application developers.</p>
@@ -36,19 +36,19 @@
 
       <div class="front-end">
         <ul class="front">
-          <li>HTML: Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</li>
-          <li>CSS: Cascading Style Sheet can define color, font, text alignment, size, borders, spacing, layout and many other typographic characteristics</li>
-          <li>Javascript: JavaScript (JS) is a programming language used to make web pages interactive.</li>
+          <li><u>HTML</u>: Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</li>
+          <li><u>CSS</u>: Cascading Style Sheet can define color, font, text alignment, size, borders, spacing, layout and many other typographic characteristics</li>
+          <li><u>Javascript</u>: JavaScript (JS) is a programming language used to make web pages interactive.</li>
         </ul>
       </div>
 
       <div class="back-end">
         <ul>
-          <li>PHP: PHP is designed to pull and edit information in the database. It’s most commonly bundled with databases written in the SQL language. PHP was designed strictly for the web and remains one of the most widely used languages around. The versatility of the language and the frameworks it powers make employment options numerous and diverse. </li>
+          <li><u>PHP</u>: PHP is designed to pull and edit information in the database. It’s most commonly bundled with databases written in the SQL language. PHP was designed strictly for the web and remains one of the most widely used languages around. The versatility of the language and the frameworks it powers make employment options numerous and diverse. </li>
           <img src="img/php.png">
-          <li>Ruby: Ruby is equal parts simplicity and complexity, pairing simple code with more flexibility and extra tools. Ruby bundles the back end with database functionality that PHP and SQL can offer as a pair—it’s great for startups, easy maintenance, and high-traffic demands. It's very popular with startups and smaller companies</li>
+          <li><u>Ruby</u>: Ruby is equal parts simplicity and complexity, pairing simple code with more flexibility and extra tools. Ruby bundles the back end with database functionality that PHP and SQL can offer as a pair—it’s great for startups, easy maintenance, and high-traffic demands. It's very popular with startups and smaller companies</li>
           <img src="img/ruby.png">
-          <li>Python: With fewer lines of code, the Python programming language is fast, making it ideal for getting things to market quickly. The emphasis is on readability and simplicity, which makes it great for beginners.</li>
+          <li><u>Python</u>: With fewer lines of code, the Python programming language is fast, making it ideal for getting things to market quickly. The emphasis is on readability and simplicity, which makes it great for beginners.</li>
           <img src="img/python.png">
         </ul>
       </div>
@@ -70,12 +70,14 @@
         </div>
         <button type="button" class="btn">Submit</button>
       </form>
+
       <div class="experience">
         <p id="yes">Excellent! Depending on your past experience, you may want to explore more challenging languages, such as Java, C#, or C++</p>
       </div>
       <div class="experience">
         <p id="no">No problem! People from various backgrounds come to Epicodus. Some have no experience whatsoever and are looking to make a career change. So, you're in good company!</p>
       </div>
+
       <h2>Are you interested in a full-time program?</h2>
       <form id="programLength">
         <div class="radio">
@@ -92,14 +94,19 @@
         </div>
         <button type="submit" class="length">Submit</button>
       </form>
+
       <div class="full-length">
         <p class="full-time">Our full-time program consists of over 800 hours classroom learning, 80 hours of job and internship preparation, and 150 hours of internship learning.</p>
       </div>
+
       <div class="evening-class">
         <p class="part-time">We understand how demanding this program can be. Many of our students work full-time jobs among other responsibilities. We offer a 15 week introduction course on Mondays and Wednesdays from 6-9pm</p>
       </div>
+
       <p>If you are new to developing, we recommend that you consider the Ruby track or Python. You can learn more about our Ruby track <a href="https://www.epicodus.com/ruby">here.</a>
-      <p>However, PHP is especially popular for content-heavy websites. It's known for it's use in content management systems like Wordpress. Click <a href="https://www.epicodus.com/php">here</a> to learn more about our PHP program.</p> 
+
+      <p>However, PHP is especially popular for content-heavy websites. It's known for it's use in content management systems like Wordpress. Click <a href="https://www.epicodus.com/php">here</a> to learn more about our PHP program.</p>
     </div>
+    <div class="">
   </body>
 </html>
