add 4th question to html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,30 @@
       <p>If you are new to developing, we recommend that you consider the Ruby track or Python. You can learn more about our Ruby track <a href="https://www.epicodus.com/ruby">here.</a>
 
       <p>However, PHP is especially popular for content-heavy websites. It's known for it's use in content management systems like Wordpress. Click <a href="https://www.epicodus.com/php">here</a> to learn more about our PHP program.</p>
+
+      <h2>Do you enjoy working in pairs?</h2>
+      <form id="pairs">
+        <div class="radio">
+          <label>
+            <input type="radio" name="type" value="front" checked>
+            Yes
+          </label>
+        </div>
+
+        <div class="radio">
+          <label>
+            <input type="radio" name="type" value="front" checked>
+            Not so much
+          </label>
+        </div>
+        <button type="submit" class="btn">Submit</button>
+      </form>
+      <div class="pairs-yes">
+        <p id="yes-pairs">Pair programming is central here at Epicodus. Most days, you'll practice pair programming, i.e. two people sharing one computer. You will each take turns using the keyboard and mouse. Also, we've found that pair programming helps you learn prgramming concenpts faster.</p>
+      </div>
+      <div class="pairs-no">
+        <p id="no-pairs"><p>
+      </div>    
     </div>
-    <div class="">
   </body>
 </html>
