add jumbotron and image in h1

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="utf-8">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Coding Languages</title>
   </head>
   <body>
-    <h1>Which coding language is the right fit for me?</h1>
     <div class="container">
+      <div class="jumbotron">
+        <!-- <img src="img/coding.png"> -->
+        <h1>Which coding language is the right fit for me?</h1>
+        <img src="img/coding.png" id="coding">
+      </div>
       <h2 id="top">Front End Developing vs Back End Developing</h2>
       <ul>
         <li>Front End: Front-end developers spend their time making things look and work well, obsessing over layouts, navigation, colors, and design.</li>
@@ -128,8 +132,8 @@
         <p id="yes-pairs">Pair programming is central here at Epicodus. Most days, you'll practice pair programming, i.e. two people sharing one computer. You will each take turns using the keyboard and mouse. Also, we've found that pair programming helps you learn prgramming concenpts faster.</p>
       </div>
       <div class="pairs-no">
-        <p id="no-pairs"><p>
-      </div>    
+        <p id="no-pairs">We understand how working in pairs can pose it's on unique challenges. But, keep in mind that pair programming is increasingly used by tech companies like Facebook and Square. By working in pairs, you can catch each other's mistakes, teach each other new skills, and come up with solutions together.<p>
+      </div>
     </div>
   </body>
 </html>
