add function for 'Do you enjoy working in pairs' form. No success yet

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <p id="yes-pairs">Pair programming is central here at Epicodus. Most days, you'll practice pair programming, i.e. two people sharing one computer. You will each take turns using the keyboard and mouse. Also, we've found that pair programming helps you learn prgramming concenpts faster.</p>
       </div>
       <div class="pairs-no">
-        <p id="no-pairs">We understand how working in pairs can pose it's on unique challenges. But, keep in mind that pair programming is increasingly used by tech companies like Facebook and Square. By working in pairs, you can catch each other's mistakes, teach each other new skills, and come up with solutions together.<p>
+        <p id="not-so-much">We understand how working in pairs can pose it's on unique challenges. But, keep in mind that pair programming is increasingly used by tech companies like Facebook and Square. By working in pairs, you can catch each other's mistakes, teach each other new skills, and come up with solutions together.<p>
       </div>
     </div>
   </body>
