--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <!-- <img src="img/coding.png"> -->
         <h1>Which coding language is the right fit for me?</h1>
         <img src="img/coding.png" id="coding">
       </div>
@@ -115,14 +114,14 @@
       <form id="pairs">
         <div class="radio">
           <label>
-            <input type="radio" name="type" value="front" checked>
+            <input type="radio" name="pairs" value="front" checked>
             Yes
           </label>
         </div>
 
         <div class="radio">
           <label>
-            <input type="radio" name="type" value="front" checked>
+            <input type="radio" name="pairs" value="front" checked>
             Not so much
           </label>
         </div>
