--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
       <form id="experience">
         <div class="radio">
           <label>
-            <input type="radio" name="type" value="experience" checked>
+            <input type="radio" name="type" value="background" checked>
               Yes
           </label>
         </div>
 
         <div class-radio="radio">
           <label>
-            <input type="radio" name="type" value="experience" checked>
+            <input type="radio" name="type" value="background" checked>
               No
           </label>
         </div>
@@ -77,7 +77,7 @@
       <div class="experience">
         <p id="yes">Excellent! Depending on your past experience, you may want to explore more challenging languages, such as Java, C#, or C++</p>
       </div>
-      <div class="experience">
+      <div class="inexperience">
         <p id="no">No problem! People from various backgrounds come to Epicodus. Some have no experience whatsoever and are looking to make a career change. So, you're in good company!</p>
       </div>
 
